<resources>
    <string name="app_name">MensaMenu</string>

    <string name="price_group_student">Prices</string>
    <string name="title_activity_settings">Settings</string>

    <string name="make_notification" translatable="false">Make Notification</string>
    <string name="settings_confirm">Confirm</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="settings">Settings</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thur</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="monday">Mon</string>
    <string name="menu_website_mensa_71" translatable="false">https://www.studierendenwerk-kassel.de/speiseplaene/mensa-71-wilhelmshoeher-allee</string>
    <string name="menu_website_main_mensa" translatable="false">https://www.studierendenwerk-kassel.de/speiseplaene/zentralmensa-arnold-bode-strasse</string>
    <string name="next_day">Next</string>
    <string name="prev_day">Prev</string>
    <string name="monday_name">Monday</string>
    <string name="tuesday_name">Tuesday</string>
    <string name="wednesday_name">Wednesday</string>
    <string name="thursday_name">Thursday</string>
    <string name="friday_name">Friday</string>
    <string name="saturday_name">Saturday</string>
    <string name="sunday_name">Sunday</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description">Shows the Menu of the day</string>
    <string name="loading">loading…</string>
    <string name="loading_hints">…</string>
    <string name="food_1">Food 1</string>
    <string name="food_2">Food 2</string>
    <string name="food_3">Food 3</string>
</resources>