<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingTop="10dp">

    <Button
        android:id="@+id/btn_send"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"

        android:text="Button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/txt_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/day_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="Monday" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/essen1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"

        android:background="@color/card_background">

        <TextView
            android:id="@+id/essen1_title"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:padding="2dp"
            android:paddingStart="7dp"

            android:text="Essen 1"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/essen1_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="Ofenfrische Sesam-Blechkartoffeln an hausgemachtem Kartotenmus"
            android:textColor="@color/food_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/price_guideline1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/essen1_price_group"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/price_group_student"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/price_guideline1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/essen1_price"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="2,50€"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toStartOf="@+id/price_guideline1"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/essen1_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="(V Kn, 40)"
            android:textAlignment="viewEnd" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/essen2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"

        android:background="@color/card_background">

        <TextView
            android:id="@+id/essen2_title"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:padding="2dp"
            android:paddingStart="7dp"

            android:text="Essen 2"
            android:textColor="@color/title_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/essen2_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="Ofenfrische Sesam-Blechkartoffeln an hausgemachtem Kartotenmus"
            android:textColor="@color/food_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/price_guideline2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/essen2_price_group"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/price_group_student"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/price_guideline2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/essen2_price"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="2,50€"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toStartOf="@+id/price_guideline2"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/essen2_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="(V Kn, 40)"
            android:textAlignment="viewEnd" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/essen3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"

        android:background="@color/card_background">

        <TextView
            android:id="@+id/essen3_title"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:padding="2dp"
            android:paddingStart="7dp"

            android:text="Essen 3"
            android:textColor="@color/title_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/essen3_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="Ofenfrische Sesam-Blechkartoffeln an hausgemachtem Kartotenmus"
            android:textColor="@color/food_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/price_guideline3"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/essen3_price_group"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/price_group_student"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/price_guideline3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/essen3_price"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="2,50€"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toStartOf="@+id/price_guideline3"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/essen3_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="(V Kn, 40)"
            android:textAlignment="viewEnd" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_prev_day"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <Button
            android:id="@+id/btn_prev_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>